src/video.h

    typedef cv::KalmanFilter *KalmanFilter;
typedef void *KalmanFilter;
    Mat KalmanFilter_GetStatePre(KalmanFilter kf);
    Mat KalmanFilter_GetStatePost(KalmanFilter kf);
    Mat KalmanFilter_GetMeasurementMatrix(KalmanFilter kf);
    Mat KalmanFilter_GetProcessNoiseCov(KalmanFilter kf);
    Mat KalmanFilter_GetMeasurementNoiseCov(KalmanFilter kf);
    Mat KalmanFilter_GetTemp1(KalmanFilter kf);
    Mat KalmanFilter_GetTemp2(KalmanFilter kf);
    Mat KalmanFilter_GetTemp3(KalmanFilter kf);
    Mat KalmanFilter_GetTemp4(KalmanFilter kf);
    Mat KalmanFilter_GetTemp5(KalmanFilter kf);