packages/dartcv/lib/src/g/video.g.dart


  late final _KalmanFilter_GetGain_AsyncPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(
              KalmanFilter, imp1.CvCallback_1)>>('KalmanFilter_GetGain_Async');
  late final _KalmanFilter_GetGain_Async =
      _KalmanFilter_GetGain_AsyncPtr.asFunction<
          ffi.Pointer<CvStatus> Function(KalmanFilter, imp1.CvCallback_1)>();

  ffi.Pointer<CvStatus> KalmanFilter_GetMeasurementMatrix(
    KalmanFilter self,
    ffi.Pointer<Mat> rval,
  ) {
    return _KalmanFilter_GetMeasurementMatrix(
      self,
      rval,
    );
  }

  late final _KalmanFilter_GetMeasurementMatrixPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(KalmanFilter,
              ffi.Pointer<Mat>)>>('KalmanFilter_GetMeasurementMatrix');
  late final _KalmanFilter_GetMeasurementMatrix =
      _KalmanFilter_GetMeasurementMatrixPtr.asFunction<
          ffi.Pointer<CvStatus> Function(KalmanFilter, ffi.Pointer<Mat>)>();

  ffi.Pointer<CvStatus> KalmanFilter_GetMeasurementMatrix_Async(
    KalmanFilter self,
    imp1.CvCallback_1 callback,
  ) {
    return _KalmanFilter_GetMeasurementMatrix_Async(
      self,
      callback,
    );
  }

  late final _KalmanFilter_GetMeasurementMatrix_AsyncPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(KalmanFilter,
              imp1.CvCallback_1)>>('KalmanFilter_GetMeasurementMatrix_Async');
  late final _KalmanFilter_GetMeasurementMatrix_Async =
      _KalmanFilter_GetMeasurementMatrix_AsyncPtr.asFunction<
          ffi.Pointer<CvStatus> Function(KalmanFilter, imp1.CvCallback_1)>();

  ffi.Pointer<CvStatus> KalmanFilter_GetMeasurementNoiseCov(
    KalmanFilter self,
    ffi.Pointer<Mat> rval,
  ) {
    return _KalmanFilter_GetMeasurementNoiseCov(
      self,
      rval,
    );
  }

  late final _KalmanFilter_GetMeasurementNoiseCovPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(KalmanFilter,
              ffi.Pointer<Mat>)>>('KalmanFilter_GetMeasurementNoiseCov');
  late final _KalmanFilter_GetMeasurementNoiseCov =
      _KalmanFilter_GetMeasurementNoiseCovPtr.asFunction<
          ffi.Pointer<CvStatus> Function(KalmanFilter, ffi.Pointer<Mat>)>();

  ffi.Pointer<CvStatus> KalmanFilter_GetMeasurementNoiseCov_Async(
    KalmanFilter self,
    imp1.CvCallback_1 callback,
  ) {
    return _KalmanFilter_GetMeasurementNoiseCov_Async(
      self,
      callback,
    );
  }

  late final _KalmanFilter_GetMeasurementNoiseCov_AsyncPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(KalmanFilter,
              imp1.CvCallback_1)>>('KalmanFilter_GetMeasurementNoiseCov_Async');
  late final _KalmanFilter_GetMeasurementNoiseCov_Async =
      _KalmanFilter_GetMeasurementNoiseCov_AsyncPtr.asFunction<
          ffi.Pointer<CvStatus> Function(KalmanFilter, imp1.CvCallback_1)>();

  ffi.Pointer<CvStatus> KalmanFilter_GetProcessNoiseCov(
    KalmanFilter self,
    ffi.Pointer<Mat> rval,
  ) {
    return _KalmanFilter_GetProcessNoiseCov(
      self,
      rval,
    );
  }

  late final _KalmanFilter_GetProcessNoiseCovPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(KalmanFilter,
              ffi.Pointer<Mat>)>>('KalmanFilter_GetProcessNoiseCov');
  late final _KalmanFilter_GetProcessNoiseCov =
      _KalmanFilter_GetProcessNoiseCovPtr.asFunction<
          ffi.Pointer<CvStatus> Function(KalmanFilter, ffi.Pointer<Mat>)>();

  ffi.Pointer<CvStatus> KalmanFilter_GetProcessNoiseCov_Async(
    KalmanFilter self,
    imp1.CvCallback_1 callback,
  ) {
    return _KalmanFilter_GetProcessNoiseCov_Async(
      self,
      callback,
    );
  }

  late final _KalmanFilter_GetProcessNoiseCov_AsyncPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(KalmanFilter,
              imp1.CvCallback_1)>>('KalmanFilter_GetProcessNoiseCov_Async');
  late final _KalmanFilter_GetProcessNoiseCov_Async =
      _KalmanFilter_GetProcessNoiseCov_AsyncPtr.asFunction<
          ffi.Pointer<CvStatus> Function(KalmanFilter, imp1.CvCallback_1)>();

  ffi.Pointer<CvStatus> KalmanFilter_GetStatePost(
    KalmanFilter self,
    ffi.Pointer<Mat> rval,
  ) {
    return _KalmanFilter_GetStatePost(
      self,
      rval,
    );
  }

  late final _KalmanFilter_GetStatePostPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(
              KalmanFilter, ffi.Pointer<Mat>)>>('KalmanFilter_GetStatePost');
  late final _KalmanFilter_GetStatePost =
      _KalmanFilter_GetStatePostPtr.asFunction<
          ffi.Pointer<CvStatus> Function(KalmanFilter, ffi.Pointer<Mat>)>();

  ffi.Pointer<CvStatus> KalmanFilter_GetStatePost_Async(
    KalmanFilter self,
    imp1.CvCallback_1 callback,
  ) {
    return _KalmanFilter_GetStatePost_Async(
      self,
      callback,
    );
  }

  late final _KalmanFilter_GetStatePost_AsyncPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(KalmanFilter,
              imp1.CvCallback_1)>>('KalmanFilter_GetStatePost_Async');
  late final _KalmanFilter_GetStatePost_Async =
      _KalmanFilter_GetStatePost_AsyncPtr.asFunction<
          ffi.Pointer<CvStatus> Function(KalmanFilter, imp1.CvCallback_1)>();

  ffi.Pointer<CvStatus> KalmanFilter_GetStatePre(
    KalmanFilter self,
    ffi.Pointer<Mat> rval,
  ) {
    return _KalmanFilter_GetStatePre(
      self,
      rval,
    );
  }

  late final _KalmanFilter_GetStatePrePtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(
              KalmanFilter, ffi.Pointer<Mat>)>>('KalmanFilter_GetStatePre');
  late final _KalmanFilter_GetStatePre =
      _KalmanFilter_GetStatePrePtr.asFunction<
          ffi.Pointer<CvStatus> Function(KalmanFilter, ffi.Pointer<Mat>)>();

  ffi.Pointer<CvStatus> KalmanFilter_GetStatePre_Async(
    KalmanFilter self,
    imp1.CvCallback_1 callback,
  ) {
    return _KalmanFilter_GetStatePre_Async(
      self,
      callback,
    );
  }

  late final _KalmanFilter_GetStatePre_AsyncPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(KalmanFilter,
              imp1.CvCallback_1)>>('KalmanFilter_GetStatePre_Async');
  late final _KalmanFilter_GetStatePre_Async =
      _KalmanFilter_GetStatePre_AsyncPtr.asFunction<
          ffi.Pointer<CvStatus> Function(KalmanFilter, imp1.CvCallback_1)>();

  ffi.Pointer<CvStatus> KalmanFilter_GetTemp1(
    KalmanFilter self,
    ffi.Pointer<Mat> rval,
  ) {
    return _KalmanFilter_GetTemp1(
      self,
      rval,
    );
  }

  late final _KalmanFilter_GetTemp1Ptr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(
              KalmanFilter, ffi.Pointer<Mat>)>>('KalmanFilter_GetTemp1');
  late final _KalmanFilter_GetTemp1 = _KalmanFilter_GetTemp1Ptr.asFunction<
      ffi.Pointer<CvStatus> Function(KalmanFilter, ffi.Pointer<Mat>)>();

  ffi.Pointer<CvStatus> KalmanFilter_GetTemp1_Async(
    KalmanFilter self,
    imp1.CvCallback_1 callback,
  ) {
    return _KalmanFilter_GetTemp1_Async(
      self,
      callback,
    );
  }

  late final _KalmanFilter_GetTemp1_AsyncPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(
              KalmanFilter, imp1.CvCallback_1)>>('KalmanFilter_GetTemp1_Async');
  late final _KalmanFilter_GetTemp1_Async =
      _KalmanFilter_GetTemp1_AsyncPtr.asFunction<
          ffi.Pointer<CvStatus> Function(KalmanFilter, imp1.CvCallback_1)>();

  ffi.Pointer<CvStatus> KalmanFilter_GetTemp2(
    KalmanFilter self,
    ffi.Pointer<Mat> rval,
  ) {
    return _KalmanFilter_GetTemp2(
      self,
      rval,
    );
  }

  late final _KalmanFilter_GetTemp2Ptr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(
              KalmanFilter, ffi.Pointer<Mat>)>>('KalmanFilter_GetTemp2');
  late final _KalmanFilter_GetTemp2 = _KalmanFilter_GetTemp2Ptr.asFunction<
      ffi.Pointer<CvStatus> Function(KalmanFilter, ffi.Pointer<Mat>)>();

  ffi.Pointer<CvStatus> KalmanFilter_GetTemp2_Async(
    KalmanFilter self,
    imp1.CvCallback_1 callback,
  ) {
    return _KalmanFilter_GetTemp2_Async(
      self,
      callback,
    );
  }

  late final _KalmanFilter_GetTemp2_AsyncPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(
              KalmanFilter, imp1.CvCallback_1)>>('KalmanFilter_GetTemp2_Async');
  late final _KalmanFilter_GetTemp2_Async =
      _KalmanFilter_GetTemp2_AsyncPtr.asFunction<
          ffi.Pointer<CvStatus> Function(KalmanFilter, imp1.CvCallback_1)>();

  ffi.Pointer<CvStatus> KalmanFilter_GetTemp3(
    KalmanFilter self,
    ffi.Pointer<Mat> rval,
  ) {
    return _KalmanFilter_GetTemp3(
      self,
      rval,
    );
  }

  late final _KalmanFilter_GetTemp3Ptr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(
              KalmanFilter, ffi.Pointer<Mat>)>>('KalmanFilter_GetTemp3');
  late final _KalmanFilter_GetTemp3 = _KalmanFilter_GetTemp3Ptr.asFunction<
      ffi.Pointer<CvStatus> Function(KalmanFilter, ffi.Pointer<Mat>)>();

  ffi.Pointer<CvStatus> KalmanFilter_GetTemp3_Async(
    KalmanFilter self,
    imp1.CvCallback_1 callback,
  ) {
    return _KalmanFilter_GetTemp3_Async(
      self,
      callback,
    );
  }

  late final _KalmanFilter_GetTemp3_AsyncPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(
              KalmanFilter, imp1.CvCallback_1)>>('KalmanFilter_GetTemp3_Async');
  late final _KalmanFilter_GetTemp3_Async =
      _KalmanFilter_GetTemp3_AsyncPtr.asFunction<
          ffi.Pointer<CvStatus> Function(KalmanFilter, imp1.CvCallback_1)>();

  ffi.Pointer<CvStatus> KalmanFilter_GetTemp4(
    KalmanFilter self,
    ffi.Pointer<Mat> rval,
  ) {
    return _KalmanFilter_GetTemp4(
      self,
      rval,
    );
  }

  late final _KalmanFilter_GetTemp4Ptr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(
              KalmanFilter, ffi.Pointer<Mat>)>>('KalmanFilter_GetTemp4');
  late final _KalmanFilter_GetTemp4 = _KalmanFilter_GetTemp4Ptr.asFunction<
      ffi.Pointer<CvStatus> Function(KalmanFilter, ffi.Pointer<Mat>)>();

  ffi.Pointer<CvStatus> KalmanFilter_GetTemp4_Async(
    KalmanFilter self,
    imp1.CvCallback_1 callback,
  ) {
    return _KalmanFilter_GetTemp4_Async(
      self,
      callback,
    );
  }

  late final _KalmanFilter_GetTemp4_AsyncPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(
              KalmanFilter, imp1.CvCallback_1)>>('KalmanFilter_GetTemp4_Async');
  late final _KalmanFilter_GetTemp4_Async =
      _KalmanFilter_GetTemp4_AsyncPtr.asFunction<
          ffi.Pointer<CvStatus> Function(KalmanFilter, imp1.CvCallback_1)>();

  ffi.Pointer<CvStatus> KalmanFilter_GetTemp5(
    KalmanFilter self,
    ffi.Pointer<Mat> rval,
  ) {
    return _KalmanFilter_GetTemp5(
      self,
      rval,
    );
  }

  late final _KalmanFilter_GetTemp5Ptr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(
              KalmanFilter, ffi.Pointer<Mat>)>>('KalmanFilter_GetTemp5');
  late final _KalmanFilter_GetTemp5 = _KalmanFilter_GetTemp5Ptr.asFunction<
      ffi.Pointer<CvStatus> Function(KalmanFilter, ffi.Pointer<Mat>)>();

  ffi.Pointer<CvStatus> KalmanFilter_GetTemp5_Async(
    KalmanFilter self,
    imp1.CvCallback_1 callback,
  ) {
    return _KalmanFilter_GetTemp5_Async(
      self,
      callback,
    );
  }

  late final _KalmanFilter_GetTemp5_AsyncPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(
              KalmanFilter, imp1.CvCallback_1)>>('KalmanFilter_GetTemp5_Async');
  late final _KalmanFilter_GetTemp5_Async =
      _KalmanFilter_GetTemp5_AsyncPtr.asFunction<
          ffi.Pointer<CvStatus> Function(KalmanFilter, imp1.CvCallback_1)>();
